Avoid horizontal scroll bars

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ div.event {
   display: inline-block;
   height: 200px;
   width: 100%;
-  margin: 20px;
+  margin: 20px 0px;
   text-align: center;
 }
 
